--- a/css/groups.css
+++ b/css/groups.css
@@ -2,7 +2,7 @@ body {
     background-color: #E6ECF0;
 }
 
-h1 {
+header .title {
  letter-spacing: normal;   
 }
 
